crates/apollo-compiler/test_data/diagnostics/0101_mismatched_variable_usage.txt
Error: variable `intArg` cannot be used for argument `booleanArg` as their types mismatch
   ╭─[0101_mismatched_variable_usage.graphql:3:21]
   │
 1 │ query intCannotGoIntoBoolean($intArg: Int) {
   │                              ──────┬─────  
   │                                    ╰─────── variable `intArg` of type `Int` is declared here
   │ 
 3 │     booleanArgField(booleanArg: $intArg)
   │                     ─────────┬─────────  
   │                              ╰─────────── argument `booleanArg` of type `Boolean` is declared here
───╯
Error: variable `booleanListArg` cannot be used for argument `booleanArg` as their types mismatch
   ╭─[0101_mismatched_variable_usage.graphql:9:21]
   │
 7 │ query booleanListCannotGoIntoBoolean($booleanListArg: [Boolean]) {
   │                                      ─────────────┬────────────  
   │                                                   ╰────────────── variable `booleanListArg` of type `[Boolean]` is declared here
   │ 
 9 │     booleanArgField(booleanArg: $booleanListArg)
   │                     ─────────────┬─────────────  
   │                                  ╰─────────────── argument `booleanArg` of type `Boolean` is declared here
───╯
Error: variable `booleanArg` cannot be used for argument `nonNullBooleanArg` as their types mismatch
    ╭─[0101_mismatched_variable_usage.graphql:15:28]
    │
 13 │ query booleanArgQuery($booleanArg: Boolean) {
    │                       ──────────┬─────────  
    │                                 ╰─────────── variable `booleanArg` of type `Boolean` is declared here
    │ 
 15 │     nonNullBooleanArgField(nonNullBooleanArg: $booleanArg)
    │                            ───────────────┬──────────────  
    │                                           ╰──────────────── argument `nonNullBooleanArg` of type `Boolean!` is declared here
────╯
Error: variable `booleanList` cannot be used for argument `nonNullBooleanListArg` as their types mismatch
    ╭─[0101_mismatched_variable_usage.graphql:21:29]
    │
 19 │ query listToNonNullList($booleanList: [Boolean]) {
    │                         ───────────┬───────────  
    │                                    ╰───────────── variable `booleanList` of type `[Boolean]` is declared here
    │ 
 21 │     nonNullBooleanListField(nonNullBooleanListArg: $booleanList)
    │                             ─────────────────┬─────────────────  
    │                                              ╰─────────────────── argument `nonNullBooleanListArg` of type `[Boolean]!` is declared here
────╯
Error: variable `intArg` cannot be used for argument `nonNullIntArg` as their types mismatch
    ╭─[0101_mismatched_variable_usage.graphql:26:24]
    │
 26 │     nonNullIntArgField(nonNullIntArg: $intArg)
    │                        ───────────┬──────────  
    │                                   ╰──────────── argument `nonNullIntArg` of type `Int!` is declared here
    │ 
 29 │ query fragmentNonNullIntArgField($intArg: Int) {
    │                                  ──────┬─────  
    │                                        ╰─────── variable `intArg` of type `Int` is declared here
────╯
Error: variable `intArg` cannot be used for argument `nonNullIntArg` as their types mismatch
    ╭─[0101_mismatched_variable_usage.graphql:40:24]
    │
 40 │     nonNullIntArgField(nonNullIntArg: $intArg)
    │                        ───────────┬──────────  
    │                                   ╰──────────── argument `nonNullIntArg` of type `Int!` is declared here
    │ 
 43 │ query doubleNestedFragmentNonNullIntArgField($intArg: Int) {
    │                                              ──────┬─────  
    │                                                    ╰─────── variable `intArg` of type `Int` is declared here
────╯

